# cl-bot

./: .gitignore  Cargo.toml  README  example.toml
src/: arg.rs  config.rs  listing.rs  main.rs  store.rs  telegram.rs  types.rs
